Development has same functional status as release 1.0.0

--- a/development/makefile
+++ b/development/makefile
@@ -7,6 +7,9 @@ SRCS := $(wildcard *.c)
 # Names of all possible object files
 OBJS := $(SRCS:%.c=%.o)
 
+# Names of all possible executables
+BINS := $(SRCS:%.c=%)
+
 all: ${OBJS} main
 
 # Compile sources into object files
