Fixed bug that did not allow 100% duty cycle in analogWrite

--- a/development/makefile
+++ b/development/makefile
@@ -17,7 +17,7 @@ all: ${OBJS} main
 	${CC} -c $<
 
 main: ${OBJS}
-	${CC} -o main ${OBJS}
+	${CC} -o main ${OBJS} -lm
 
 clean:
 	@echo 'Removing all objects and executables...'
